tests/ui/parser/shebang/issue-71471-ignore-tidy.rs

#!B //~ ERROR expected `[`, found `B`

//@ reference: input.shebang
